# LightEnhancerApp

./: README.md  SA_ZeroDCETiny.ipynb
LightEnhancer/: settings.gradle
LightEnhancer/app/: build.gradle
LightEnhancer/app/src/androidTest/java/com/example/lightenhancer/: NativeLibTest.kt
LightEnhancer/app/src/main/: AndroidManifest.xml
LightEnhancer/app/src/main/cpp/: CMakeLists.txt  LightEnhancerModel.cpp  LightEnhancerModel.h  enhancer_test.cpp  native-lib.cpp
LightEnhancer/app/src/main/cpp/device_adapters/: AndroidMatAdapter.cpp  AndroidMatAdapter.h  DeviceMatAdapter.h
LightEnhancer/app/src/main/cpp/light_enhance_strategies/: LightEnhanceStrategy.h  ResizeStrategy.cpp  ResizeStrategy.h  SlidingWindowStrategy.cpp  SlidingWindowStrategy.h
LightEnhancer/app/src/main/java/com/example/lightenhancer/: ButtonVisibilityHandler.kt  CameraHandler.kt  Constants.kt  ImageEditActivity.kt  ImageSaver.kt  LightEnhancer.kt  MainActivity.kt  PermissionHandler.kt  RealtimeAnalyzer.kt
LightEnhancer/app/src/main/res/drawable/: capture_button.xml  gallery_button.xml  image_edit_background.xml  settings_button.xml  settings_popup_background.xml
LightEnhancer/app/src/main/res/layout/: activity_image_edit.xml  activity_main.xml  settings_popup.xml
LightEnhancer/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
LightEnhancer/app/src/main/res/values-night/: themes.xml
LightEnhancer/app/src/test/java/com/example/lightenhancer/: ImageEditActivityTest.kt  MainActivityTest.kt  ShadowLightEnhancer.kt  TestApplication.kt
LightEnhancer/gradle/wrapper/: gradle-wrapper.properties
LightEnhancer/models/: zero_dce_lite_128x128.tflite  zero_dce_lite_256x256.tflite  zero_dce_lite_512x512.tflite
